Fix spacing of chat bubble divs.

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -106,7 +106,11 @@ div.chat-icon {
   overflow: scroll;
 }
 .chat-input {
+  border-top: 0.6px solid lightgrey;
   height: 60px;
+}
+input#query {
+  border: none;
 }
 
 td#result {
